frontend/src/components/SpotDetails/SpotDetails.css
#main-spotDetails-container {
    display: flex;
    flex-direction: column;
    padding-left: 35px;
    padding-right: 35px;
}

.spotDetails-spotName {
    font-size: 30px;
}

.spotDetails-city-state-country-text {
    font-size: 16px;
    font-weight: bold;
}

/* spot images container ------ */
#spotImages-container {
    display: flex;
    column-gap: 5px;
    max-height: 650px;
}

.main-img {
    flex-basis: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.main-img img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    border: 2px solid black;
}

#normal-spotImgs-container {
    flex-basis: 50%;
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
    grid-template-rows: repeat(2, minmax(0, 1fr));
    /* minmax is allowing the images to scale down in the grid without the content overflowing */
    gap: 5px;
}

.normal-spotImgs {
    margin: 0;
    padding: 0;
    border: 2px solid black;
}

.normal-spotImgs img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}
/* spot images container ------ */

/* description-reserve-area */
#description-reserve-container {
    display: flex;
    justify-content: space-between;
    margin-top: 20px;
    padding-bottom: 25px;
    border-bottom: 2px solid black;
}

.description-container-spot-details {
    height: fit-content;
    position: relative;
    top: -30px;
    flex-basis: 50%;
}

/* reserve container  */
.reserve-container {
    border: 3px solid black;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 450px;
    height: 125px;
    /* padding: 10px 10px; */
    padding-top: 5px;
    padding-bottom: 10px;
}

.hosted-by-text {
    font-size: 28px;
}

#reserve-info-box {
    display: flex;
    gap: 70px;
    align-items: center;
}

.spotDetails-price-text {
    font-size: 25px;
    font-weight: bold;
}

.spotDetail-price-night-container {
    display: flex;
    gap: 2px;
}

.night-text {
    position: relative;
    top: 8px;
    font-size: 17px;
}

.reserve-button {
    margin-top: 10px;
    width: 87%;
    height: 50px;
    background-color: #FF5A5F;
    box-shadow: 7px 5px 5px black;
    color: white;
    cursor: pointer;
}


/* description-reserve-area */

.average-reviews-info-reviewSection {
    font-size: 28px;
}

.post-your-review-style-button > button {
    background-color: rgb(128, 127, 127);
    box-shadow: 3px 3px black;
    color: white;
    margin-right: 10px;
    cursor: pointer;
}


@media (max-width: 1110px) {
    #spotImages-container {
        display: flex;
        column-gap: 5px;
        max-height: 350px;
    }

    .reserve-container {
        width: 30%;
    }

    .spotDetails-price-text {
        font-size: 22px;
    }

    .night-text {
        font-size: 14px;
    }

    #reserve-info-box {
        gap: 25px;
    }
}

